--- a/.github/workflows/auto-approve-and-merge.yml
+++ b/.github/workflows/auto-approve-and-merge.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Auto merge
         uses: pascalgn/automerge-action@v0.16.3
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.RELEASE_PLEASE_TOKEN }}
