chore: update release-please workflow to grant issues permission and set GITHUB_TOKEN

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -8,6 +8,7 @@ on:
 permissions:
   contents: write
   pull-requests: write
+  issues: write
 
 jobs:
   release:
@@ -20,3 +21,5 @@ jobs:
         uses: google-github-actions/release-please-action@v4
         with:
           release-type: node
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_PLEASE_TOKEN }}
