chore: enhance auto-approve-and-merge workflow by adding issues permission and updating GITHUB_TOKEN usage

--- a/.github/workflows/auto-approve-and-merge.yml
+++ b/.github/workflows/auto-approve-and-merge.yml
@@ -10,14 +10,17 @@ on:
 permissions:
   pull-requests: write
   contents: write
+  issues: write
 
 jobs:
   automerge:
-    if: github.actor == 'github-actions[bot]'
     runs-on: ubuntu-latest
+
     steps:
       - name: Auto approve
         uses: hmarr/auto-approve-action@v3
+        env:
+          GITHUB_TOKEN: ${{ secrets.RELEASE_PLEASE_TOKEN }}
 
       - name: Auto merge
         uses: pascalgn/automerge-action@v0.16.3
