chore: update release-please configuration to enhance changelog sections and types

--- a/.release-please-config.json
+++ b/.release-please-config.json
@@ -1,6 +1,22 @@
 {
   "release-type": "node",
-  "packages": {
-    ".": {}
-  }
+  "changelog-type": "pr",
+  "changelog-sections": [
+    {
+      "type": "feat",
+      "section": "✨ Novidades"
+    },
+    {
+      "type": "fix",
+      "section": "🐛 Correções"
+    },
+    {
+      "type": "docs",
+      "section": "📝 Atualizações na documentação"
+    },
+    {
+      "type": "chore",
+      "hidden": true
+    }
+  ]
 }
